# apex-builder-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: apex-write-tool-reviewer.md
.claude/hooks/: warn-if-mcp-running.ps1
docs/: PHASE_0_GATE_1.md  PHASE_0_GATE_2.md  PHASE_0_GATE_3.md  PHASE_0_GATE_4.md  PHASE_0_GATE_5.md  PHASE_0_REPORT.md  PLAN_2A_REPORT.md  PLAN_2B_REPORT.md
scripts/: demo_layout_spec.sh  forget_phase_0_password.sh  grant_mcp_user.sql  revoke_mcp_user.sql  round_trip_proof.py  run_phase_0_gates.sh
src/apex_builder_mcp/: __init__.py  __main__.py
tests/: conftest.py
tests/integration/: test_id_allocator_real.py  test_keyring_real.py  test_layout_spec_real.py  test_pool_real.py  test_round_trip.py  test_sqlcl_metadata_real.py  test_write_tools_real.py  test_wwv_calls_real.py
tests/unit/: test_acl.py  test_all_arguments.py  test_audit_log.py  test_auth_mode.py  test_auto_export.py  test_boolean_emit.py  test_categories.py  test_credential.py  test_dry_run.py  test_entrypoint.py  test_env_guard.py  test_errors.py  test_id_allocator.py  test_import_session.py  test_layout_spec.py  test_lazy_loader.py  test_policy.py  test_pool_unit.py  test_post_write_verify.py  test_profile.py  test_profile_loader.py  test_runtime_check.py  test_sql_guard.py  test_sqlcl_metadata.py  test_sqlcl_subprocess.py  test_state.py  test_tools_apps.py  test_tools_audit_acl.py  test_tools_audit_aux.py  test_tools_buttons.py  test_tools_charts_cards_calendar.py  test_tools_connect.py  test_tools_connection.py  (+18 more)
(+53 files in other folders)
