[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apex-builder-mcp"
version = "0.0.1"
description = "MCP server for Oracle APEX 24.2 building on Oracle DB 19c"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Cong Nguyen", email = "nguyenchicong.0110@gmail.com" }]
dependencies = [
  "fastmcp>=2.9.1",
  "oracledb>=2.0",
  "keyring>=24.0",
  "pyyaml>=6.0",
  "pydantic>=2.5",
  "sqlparse>=0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.8",
  "types-PyYAML",
]

[project.scripts]
apex-builder-mcp = "apex_builder_mcp.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
  "integration: tests that need real DB DEV (skipped by default)",
]
